fixed overflow, refactored map css styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
-.leaflet-container {
-  width: 100vw;
+.map-container {
   height: 100vh;
+  width: 80vw;
+  margin-left: auto;
+}
+.leaflet-container {
+  background-color: black;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
 }
